<resources>
    <string name="app_name">contact-apps-jenius-test</string>
    <string name="fileprovider_parent">Android/data/com.yudapratama</string>
    <string name="fileprovider_child">temp.jpg</string>
    <string name="contact">Contact</string>
    <string name="add_contact">Add New Contact</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
</resources>
